--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -18,6 +18,7 @@ Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+numpy==2.1.3
 pydantic==2.9.2
 pydantic-settings==2.6.1
 pydantic_core==2.23.4
